---
source: crates/sui-prover/tests/integration.rs
assertion_line: 297
expression: output
---
exiting with verification errors
error: prover::ensures does not hold
   ┌─ tests/inputs/quantifiers/find_indices.fail.move:47:5
   │
47 │     ensures(vector::contains(indices, &1)); // EXPECTED FAILURE 3
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/quantifiers/find_indices.fail.move:43: test_wrong_contains

error: prover::ensures does not hold
   ┌─ tests/inputs/quantifiers/find_indices.fail.move:27:5
   │
27 │     ensures(vector::length(indices) == 3); // EXPECTED FAILURE 1
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/quantifiers/find_indices.fail.move:23: test_wrong_count

error: code should not abort
   ┌─ tests/inputs/quantifiers/find_indices.fail.move:37:14
   │
37 │     ensures(*vector::borrow(indices, 0) == 1); // EXPECTED FAILURE 2
   │              ^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/quantifiers/find_indices.fail.move:33: test_wrong_index

error: prover::ensures does not hold
   ┌─ tests/inputs/quantifiers/find_indices.fail.move:37:5
   │
37 │     ensures(*vector::borrow(indices, 0) == 1); // EXPECTED FAILURE 2
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/quantifiers/find_indices.fail.move:33: test_wrong_index

error: code should not abort
   ┌─ tests/inputs/quantifiers/find_indices.fail.move:57:14
   │
57 │     ensures(*vector::borrow(indices, 1) == 4); // EXPECTED FAILURE 4
   │              ^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/quantifiers/find_indices.fail.move:53: test_wrong_order

error: prover::ensures does not hold
   ┌─ tests/inputs/quantifiers/find_indices.fail.move:57:5
   │
57 │     ensures(*vector::borrow(indices, 1) == 4); // EXPECTED FAILURE 4
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/quantifiers/find_indices.fail.move:53: test_wrong_order

error: prover::ensures does not hold
   ┌─ tests/inputs/quantifiers/find_indices.fail.move:67:5
   │
67 │     ensures(vector::length(indices) == 2); // EXPECTED FAILURE 5
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/quantifiers/find_indices.fail.move:63: test_wrong_predicate
